kubernetes/density/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: density-app
  labels:
    app: density-app
    release: mon
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: 5000
spec:
  type: NodePort
  selector:
    app: density-app
  ports:
  - name: density-app
    protocol: TCP
    port: 5000
    nodePort: 30000
